--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "gendiff"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 pytest-cov = "^4.1.0"
+flake8 = "^6.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
