--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "gendiff"}]
 python = "^3.11"
 pytest-cov = "^4.1.0"
 flake8 = "^6.0.0"
+pyyaml = "^6.0"
 
 
 [tool.poetry.group.dev.dependencies]
