--- a/setup.cfg
+++ b/setup.cfg
@@ -11,12 +11,7 @@ enable-extensions = G
 isort-show-traceback = True
 
 # clean default ignore list
-ignore =
-
-per-file-ignores =
-  # it is possibble to have prints in scripts
-  brain_games/scripts/*.py: WPS421
-  brain_games/*.py: WPS421
+ignore = C901
 
 [tool:pytest]
 norecursedirs = __pycache__
